force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/cgc_sync__Sync_Remote_Request__c.object-meta.xml
<CustomObject>
    <description>Main entity to store requests for triggering technical activities on the mobile app (e.g. data re-supply, clean-up upload queue, ...)</description>
    <label>Remote Request on Mobile Devices</label>
    <nameField>
        <displayFormat>SRR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Requests on Mobile Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>