force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/fields/cgc_sync__App_Installation__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__App_Installation__c</fullName>
    <description>Relationship field to app installation.</description>
    <label>Mobile App Installation</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_Installation__c</referenceTo>
    <relationshipLabel>Sync Remote Requests</relationshipLabel>
    <relationshipName>Sync_Remote_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>