force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/fields/cgc_sync__Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remote request is processed by the mobile device.</description>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>