force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/fields/cgc_sync__Processed_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Processed_At__c</fullName>
    <description>Time when the remote request was processed by the mobile device.</description>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>