force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/fields/cgc_sync__Request_Data__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Request_Data__c</fullName>
    <description>Requested data or log that is collected from the mobile device.</description>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>