force-app/main/default/objects/cgc_sync__Sync_Remote_Request__c/fields/cgc_sync__Request_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Request_Name__c</fullName>
    <description>Name of the remote request.
		Possible values are: 
		CLEAN_FAILURE_QUEUE—Clear Upload Failures
		REQUEST_DB_CONTENT—Request Data
		REQUEST_STATS—Request Statistics
		RESET_STATS—Reset API Stats
		RESUPPLY—Resupply
		TECH_PANEL—Activate Debug Window
		TRACE_MODE—Activate Trace Mode
		UPLOAD_LOG_DUMP—Request Logs</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TECH_PANEL</fullName>
                <label>Activate Debug Window</label>
            </value>
            <value>
                <fullName>TRACE_MODE</fullName>
                <label>Activate Trace Mode</label>
            </value>
            <value>
                <fullName>CLEAN_FAILURE_QUEUE</fullName>
                <label>Clear Upload Failures</label>
            </value>
            <value>
                <fullName>UPLOAD_LOG_DUMP</fullName>
                <label>Request Logs</label>
            </value>
            <value>
                <fullName>REQUEST_STATS</fullName>
                <label>Request Statistics</label>
            </value>
            <value>
                <fullName>RESET_STATS</fullName>
                <label>Reset API Stats</label>
            </value>
            <value>
                <fullName>RESUPPLY</fullName>
                <label>Resupply</label>
            </value>
            <value>
                <fullName>REQUEST_DB_CONTENT</fullName>
                <label>Request Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>